Fixing the flickering effect

--- a/src/pages/SimpleWayToSendMoney/index.module.scss
+++ b/src/pages/SimpleWayToSendMoney/index.module.scss
@@ -90,6 +90,8 @@
     flex-direction: column;
     margin-bottom: 0px;
     margin-left: 0;
+    position: relative;
+    z-index: 9;
   }
 }
 .imageContainer {
